bug 92896 - incorrect position of bullets next to child blocks if the font-size within the child block is different, r=dbaron, sr=attinasi, a=asa